# humanoid-robotics

./: .prettierrc  README.md  api_server.py  docusaurus.config.js  final_validation.py  package-lock.json  package.json  sidebars.js  test-deployment.js  test-runner.js  test_backend_setup.py  test_local_qdrant.py  test_qdrant.py  validate_backend.py
.claude/: settings.local.json
.github/workflows/: github-pages.yml
.specify/memory/: agent-context-frontend-backend-integration.md  agent-context-rag-agent-api.md  agent-context-retrieval-validation.md  constitution.md
backend/: README.md  main.py  pyproject.toml  requirements.txt
backend/.claude/: settings.local.json
backend/src/: main.py
backend/src/rag_agent/: agent.py  api.py  models.py  retrieval.py  utils.py
backend/validation/: README.md  __init__.py  base.py  cli.py  cohere_client.py  comprehensive_report.py  config.py  logger.py  metadata_validator.py  metrics.py  models.py  persistence.py  qdrant_client.py  query_executor.py  relevance_scoring.py  sample_config.env  search.py  test_queries.py  utils.py  validate_implementation.py  validation_analyzer.py
backend/validation/api/: app.py
backend/validation/api/routes/: validation.py
backend/validation/models/: __init__.py
backend/validation/services/: metadata_inspector.py  validation_report.py  vector_loader.py
docs/: index.md  installation.md
docs/ai-robot-brain/: _category_.json  chapter-1-overview.md  chapter-2-perception.md  chapter-3-navigation.md  (+7 more)
qdrant_data/: meta.json
website/: docusaurus.config.js  package-lock.json  sidebars.js
(+177 files in other folders)
